src/components/chat-area/chat-container.module.less
@import '../../shared-styles/variables.module.less';

@chat-container-margin-size: @spacing-unit * 3;

.chat-container {
  box-sizing: border-box;
  margin: @chat-container-margin-size 0 0 @chat-container-margin-size;

  // horrible hack; flex-box with a dynamic size scrollable content with it depends on something around having explicit size
  height: calc(100vh - (@header-size + @footer-size + @chat-container-margin-size + @spacing-unit));

  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr 8fr 1fr;

  background-color: white;
}

.messages-container {
  box-sizing: border-box;
  height: 100%;
  padding: 0 @spacing-unit * 3;

  display: flex;
  flex-direction: column;

  overflow: auto;
}

.messages-container >:first-child {
  margin-top: auto;
}

